--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ asgiref==3.5.2
 backports.zoneinfo==0.2.1
 Django==4.1.4
 django-environ==0.9.0
+dj-database-url==0.5.0
 sqlparse==0.4.3
 tzdata==2022.7
