--- a/excel_comp/requirements.txt
+++ b/excel_comp/requirements.txt
@@ -4,7 +4,7 @@ Django==4.1.4
 django-environ==0.9.0
 dj-database-url==0.5.0
 gunicorn==20.1.0
-pandas
+pandas==1.5.2
 sqlparse==0.4.3
 tzdata==2022.7
 
