--- a/excel_comp/requirements.txt
+++ b/excel_comp/requirements.txt
@@ -5,6 +5,7 @@ django-environ==0.9.0
 dj-database-url==0.5.0
 gunicorn==20.1.0
 pandas==1.5.2
+psycopg2==2.9.5
 sqlparse==0.4.3
 tzdata==2022.7
 whitenoise==5.3.0
